# quick_atom

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
