[package]
name = "quick_atom"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "quick wrapper around the atom_syndication crate"
documentation = "https://docs.rs/crate/quick_atom"
repository = "https://github.com/andete/quick_atom"
keywords = ["atom", "feed", "parser", "parsing"]
categories = ["parser-implementations"]
readme = "README.md"

[badges]
travis-ci = { repository = "andete/quick_atom" }

[dependencies]
atom_syndication = "0.5"
failure = "0.1"
failure_derive = "0.1"
chrono = "0.4"
log = "0.3"
